@@ -44,6 +44,7 @@ int ln_get_object_rst (double JD, struct ln_lnlat_posn * observer, struct ln_equ
 /*! \fn double ln_get_object_next_rst (double JD, struct ln_lnlat_posn * observer, struct ln_equ_posn * object,struct ln_rst_time * rst);
 * \brief Calculate the time of next rise, set and transit for an object not orbiting the Sun.
 * E.g. it's sure, that rise, set and transit will be in <JD, JD+1> range.
+* This function is not too precise, it's good to get general idea when object will rise.
 * \ingroup rst
 */
 int ln_get_object_next_rst (double JD, struct ln_lnlat_posn * observer, struct ln_equ_posn * object, struct ln_rst_time * rst);
